--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
+        "datatables.net-bs4": "^3.2.2",
+        "datatables.net-buttons-bs4": "^1.7.1",
         "jquery.nicescroll": "^3.7.6",
         "moment": "^2.24.0",
         "select2": "^4.1.0-rc.0",
