--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "axios": "^0.21",
-        "bootstrap": "^4.0.0",
+        "bootstrap": "^4.6.0",
         "jquery": "^3.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
@@ -20,6 +20,7 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
+        "select2": "^4.0.5",
         "vue": "^2.5.17",
         "vue-loader": "^15.9.5",
         "vue-template-compiler": "^2.6.10"
@@ -30,7 +31,6 @@
         "datatables.net-buttons-bs4": "^1.7.1",
         "jquery.nicescroll": "^3.7.6",
         "moment": "^2.24.0",
-        "select2": "^4.1.0-rc.0",
         "sweetalert2": "^10.16.6"
     }
 }
