Upgrade laravel version

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
     "/assets/js/app.js": "/assets/js/app.js",
+    "/assets/css/style.css": "/assets/css/style.css",
     "/assets/guest/css/style.css": "/assets/guest/css/style.css",
-    "/assets/css/components.css": "/assets/css/components.css",
-    "/assets/css/style.css": "/assets/css/style.css"
+    "/assets/css/components.css": "/assets/css/components.css"
 }
