--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
         "chart.js": "^3.5.0",
+        "cropperjs": "^1.5.12",
         "datatables.net-bs4": "^3.2.2",
         "datatables.net-buttons-bs4": "^1.7.1",
         "jquery.nicescroll": "^3.7.6",
