Upgrade to Laravel 9

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+/public/build
+/public/build
 /node_modules
 /public/hot
 /public/storage
@@ -12,3 +14,4 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+change.log
