--- a/composer.json
+++ b/composer.json
@@ -9,26 +9,28 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "guzzlehttp/guzzle": "^7.2",
+        "laravel/framework": "^9.19",
+        "laravel/sanctum": "^3.0",
+        "laravel/tinker": "^2.7",
+        "laravel/ui": "^4.1",
+        "spatie/laravel-permission": "^5.7",
+        "yajra/laravel-datatables": "^9.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.2",
         "innocenzi/laravel-vite": "0.2.*",
         "laravel-lang/lang": "~7.0",
-        "laravel/framework": "^9.19",
-        "laravel/tinker": "^2.7",
-        "laravel/ui": "^3.2",
-        "maatwebsite/excel": "^3.1",
-        "yajra/laravel-datatables-oracle": "~9.0"
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.7",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "spatie/laravel-ignition": "^1.0",
+        "barryvdh/laravel-debugbar": "^3.7"
     },
     "config": {
         "optimize-autoloader": true,
