--- a/composer.json
+++ b/composer.json
@@ -1,63 +1,44 @@
 {
   "name": "laravel/laravel",
   "type": "project",
-  "description": "The Laravel Framework.",
+  "description": "The skeleton application for the Laravel framework.",
   "keywords": [
-    "framework",
-    "laravel"
+    "laravel",
+    "framework"
   ],
   "license": "MIT",
   "require": {
-    "php": "^8.0.2",
-    "fideloper/proxy": "^4.4",
-    "fruitcake/laravel-cors": "^2.0",
+    "php": "^8.1",
     "guzzlehttp/guzzle": "^7.2",
-    "laravel-lang/lang": "~7.0",
-    "laravel/framework": "^9.19",
-    "laravel/sanctum": "^3.0",
-    "laravel/tinker": "^2.7",
-    "laravel/ui": "^4.2",
+    "laravel/framework": "^10.10",
+    "laravel/sanctum": "^3.2",
+    "laravel/tinker": "^2.8",
+    "laravel/ui": "^4.4",
     "maatwebsite/excel": "^3.1",
-    "spatie/laravel-permission": "^5.7",
-    "yajra/laravel-datatables": "^9.0"
+    "spatie/laravel-permission": "^6.3",
+    "yajra/laravel-datatables-oracle": "^10.3.1"
   },
   "require-dev": {
     "fakerphp/faker": "^1.9.1",
     "laravel/pint": "^1.0",
-    "laravel/sail": "^1.0.1",
+    "laravel/sail": "^1.18",
     "mockery/mockery": "^1.4.4",
-    "nunomaduro/collision": "^6.1",
-    "phpunit/phpunit": "^9.5.10",
-    "spatie/laravel-ignition": "^1.0",
-    "barryvdh/laravel-debugbar": "^3.7"
-  },
-  "config": {
-    "optimize-autoloader": true,
-    "preferred-install": "dist",
-    "sort-packages": true
-  },
-  "extra": {
-    "laravel": {
-      "dont-discover": []
-    }
+    "nunomaduro/collision": "^7.0",
+    "phpunit/phpunit": "^10.1",
+    "spatie/laravel-ignition": "^2.0"
   },
   "autoload": {
     "psr-4": {
       "App\\": "app/",
       "Database\\Factories\\": "database/factories/",
       "Database\\Seeders\\": "database/seeders/"
-    },
-    "files": [
-      "app/helpers.php"
-    ]
+    }
   },
   "autoload-dev": {
     "psr-4": {
       "Tests\\": "tests/"
     }
   },
-  "minimum-stability": "stable",
-  "prefer-stable": true,
   "scripts": {
     "post-autoload-dump": [
       "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
@@ -72,5 +53,21 @@
     "post-create-project-cmd": [
       "@php artisan key:generate --ansi"
     ]
-  }
+  },
+  "extra": {
+    "laravel": {
+      "dont-discover": []
+    }
+  },
+  "config": {
+    "optimize-autoloader": true,
+    "preferred-install": "dist",
+    "sort-packages": true,
+    "allow-plugins": {
+      "pestphp/pest-plugin": true,
+      "php-http/discovery": true
+    }
+  },
+  "minimum-stability": "stable",
+  "prefer-stable": true
 }
