Fix Laravel 10 upgrade

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,19 @@
-/public/build
-/public/build
+/.phpunit.cache
 /node_modules
+/public/build
 /public/hot
 /public/storage
-/public/assets/guest/css
 /storage/*.key
 /vendor
 .env
 .env.backup
+.env.production
 .phpunit.result.cache
-docker-compose.override.yml
 Homestead.json
 Homestead.yaml
+auth.json
 npm-debug.log
 yarn-error.log
-change.log
+/.fleet
+/.idea
+/.vscode
