--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,12 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.4",
         "maatwebsite/excel": "^3.1",
+        "php-flasher/flasher-toastr-laravel": "^1.15",
         "spatie/laravel-permission": "^6.3",
         "yajra/laravel-datatables": "^10.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.9",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
